--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,6 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="{% url 'characters' %}">Characters</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'party' %}">Party</a></li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
 
           {% if user.is_authenticated %}
             <li class="nav-item">
@@ -32,11 +31,12 @@
             </li>
           {% else %}
             <li class="nav-item">
-              <a class="nav-link btn btn-outline-success btn-sm ms-2 px-3" href="{% url 'signup_login' %}">
+              <a class="nav-link btn btn-outline-success btn-sm ms-2 px-3" href="{% url 'signup-login' %}">
                 Login / Sign Up
               </a>
             </li>
           {% endif %}
+          <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
         </ul>
       </div>
     </div>
