--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <title>BattleRoster</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="icon" href="{% static 'images/favicon.ico' %}">
 </head>
 <body class="bg-dark text-light">
   <!-- Navigation -->
