--- a/templates/party.html
+++ b/templates/party.html
@@ -8,7 +8,7 @@
   {% if guest_mode %}
   <div class="alert alert-warning" role="alert">
     <strong>Guest Mode:</strong> You can view parties, but to create or manage them, please
-    <a href="{% url 'signup-login' %}" class="alert-link">log in or sign up</a>.
+    <a href="{% url 'signup_login' %}" class="alert-link">log in or sign up</a>.
   </div>
   {% endif %}
 
