--- a/templates/party_player.html
+++ b/templates/party_player.html
@@ -30,7 +30,7 @@
         {% if user.is_authenticated %}
           <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Log out</a></li>
         {% else %}
-          <li class="nav-item"><a class="nav-link" href="{% url 'signup-login' %}">Sign-up / Log-in</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'signup_login' %}">Sign-up / Log-in</a></li>
         {% endif %}
       </ul>
     </div>
