Replaced all signup_login with signup-login

--- a/templates/logout.html
+++ b/templates/logout.html
@@ -37,7 +37,7 @@
           {% if user.is_authenticated %}
           <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket me-2 text-gold"></i>Log out</a></li>
           {% else %}
-          <li class="nav-item"><a class="nav-link" href="{% url 'signup_login' %}"><i class="fa-solid fa-save me-2 text-gold"></i>Sign-up / Log-in</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'signup-login' %}"><i class="fa-solid fa-save me-2 text-gold"></i>Sign-up / Log-in</a></li>
           {% endif %}
           <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-scroll me-2 text-gold"></i>Contact</a></li>
         </ul>
@@ -51,7 +51,7 @@
             <h1 class="text-gold mb-4">You’ve been logged out</h1>
             <p class="lead mb-4">Thanks for playing! You can log back in anytime to continue managing your characters and parties.</p>
 
-            <a href="{% url 'signup_login' %}" class="btn btn-primary me-2">Log Back In</a>
+            <a href="{% url 'signup-login' %}" class="btn btn-primary me-2">Log Back In</a>
             <a href="{% url 'home' %}" class="btn btn-outline-light">Return Home</a>
         </div>
     </div>
