--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             </li>
           {% else %}
             <li class="nav-item">
-              <a class="nav-link btn btn-outline-success btn-sm ms-2 px-3" href="{% url 'signup_login' %}">
+              <a class="nav-link btn btn-outline-success btn-sm ms-2 px-3" href="{% url 'signup-login' %}">
                 Login / Sign Up
               </a>
             </li>
