--- a/templates/characters.html
+++ b/templates/characters.html
@@ -31,7 +31,7 @@
           {% if user.is_authenticated %}
             <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket me-2 text-gold"></i>Log out</a></li>
           {% else %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'signup-login' %}"><i class="fa-solid fa-save me-2 text-gold"></i>Sign-up / Log-in</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'signup_login' %}"><i class="fa-solid fa-save me-2 text-gold"></i>Sign-up / Log-in</a></li>
           {% endif %}
           <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-scroll me-2 text-gold"></i>Contact</a></li>
         </ul>
@@ -106,7 +106,7 @@
     {% if not user.is_authenticated %}
       <div class="alert alert-warning text-center mt-5">
         You can create a character as a guest, but saving or editing requires an account.
-        <a href="{% url 'signup-login' %}" class="alert-link">Sign up or Log in here</a>.
+        <a href="{% url 'signup_login' %}" class="alert-link">Sign up or Log in here</a>.
       </div>
     {% endif %}
   </div>
